--- a/app/components/MessageConsole.css
+++ b/app/components/MessageConsole.css
@@ -7,6 +7,7 @@
   height: 100%;
   font-family: 'VT323', monospace;
   border: 1px solid white;
+  border-radius: 4px;
 }
 
 .consoleHeader {
@@ -15,6 +16,7 @@
   display: block;
   border: 1px solid white;
   height: 30px;
+  border-radius: 4px 4px 0 0;
 }
 .messageList {
   padding: 1.5rem;
